export interface EntradaHistorial {
    id_entrada: number;
    id_historial: number;
    descripcion: string;
    fecha_creacion: string; // Formato ISO DateTime
}